# esp-rainmaker

examples/DTSD/main/: CMakeLists.txt  DHT22X.h  app_driver.c  app_main.c  app_priv.h
examples/DTSD/server_certs/: ca_cert.pem
